ping-log/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ping-log
  labels:
    name: ping-log
