ping-log/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
  namespace: ping-log
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong

  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: emanueletoma/kubernetes:ping-pong
          imagePullPolicy: Always
        - name: log-output
          image: emanueletoma/kubernetes:log-output
          imagePullPolicy: Always
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: log-output-config
            items:
              - key: information.txt
                path: information.txt
