ping-log/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: ping-log
spec:
  type: NodePort
  selector:
    app: ping-pong
  ports:
    - name: ping-port
      protocol: TCP
      port: 3456
      targetPort: 3456
    - name: log-port
      protocol: TCP
      port: 2345
      targetPort: 2345

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: ping-log
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: web
      protocol: TCP
      port: 5432
      targetPort: 5432
