ping-log/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: ping-pong-route
  namespace: ping-log
spec:
  parentRefs:
  - name: ping-pong-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ping-pong-svc
      port: 2345
  - matches:
    - path:
        type: PathPrefix
        value: /pingpong
    backendRefs:
    - name: ping-pong-svc
      port: 3456
